dev/cluster-addons/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: googlecasissuer-sample # issuer name 
    cert-manager.io/issuer-kind: GoogleCASIssuer # reference to the issuer we deployed in the cluster
    cert-manager.io/issuer-group: cas-issuer.jetstack.io

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port: 
              number: 8080
    host: jenkins.srush.test
  tls:
    - hosts:
      - jenkins.srush.test
      secretName: jenkins-tls
